Closed Bug 202984 Opened 22 years ago Closed 22 years ago

Right clicking on Mozilla and selecting 'Preferences' does not work

Categories

(SeaMonkey :: General, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ssu0262, Assigned: ssu0262)

References

Details

Attachments

(1 file)

Under Windows XP, right clicking on the Mozilla icon in the Start menu and selecting "Preferences" throws an error about not being able to find: mozilla.exe.exe-chrome "chrome//communicator/content/pref/pref.xul The problem is that a ' ' (space) character is needed before the '-chrome...'. The problem looks like it's coming from here: http://lxr.mozilla.org/seamonkey/source/xpfe/components/winhooks/nsWindowsHooksUtil.cpp#415 patch coming right up.
Attached patch patch v1.0Splinter Review
Comment on attachment 121359 [details] [diff] [review] patch v1.0 trival patch. Just tested it and it works.
Attachment #121359 - Flags: superreview?(jaggernaut)
Comment on attachment 121359 [details] [diff] [review] patch v1.0 r+sr=jag
Attachment #121359 - Flags: superreview?(jaggernaut)
Attachment #121359 - Flags: superreview+
Attachment #121359 - Flags: review+
patch checked in. closing bug.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 150512 has been marked as a duplicate of this bug. ***
*** Bug 198679 has been marked as a duplicate of this bug. ***
verified on build 2003042504
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: