fixing bug 202984 - Right clicking on Mozilla and selecting Preferences does not work. r/sr=jag.